--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,3 +4,4 @@ export(OpenTargetFunc)
 export(lookup_gene_symbols)
 export(lookup_variant_vep)
 export(ot_knowndrugs)
+export(ot_target_tractability)
